--- a/WoodenStories-Backend/.env
+++ b/WoodenStories-Backend/.env
@@ -14,3 +14,6 @@ UPLOAD_DIR=uploads
 CLOUDINARY_URL=cloudinary://851369353186647:SgnPHuSd3Ola2n6EBgeGH8cAKIE@dkkwcngoz
 
 //-----------------------JWT Secret--------------------
+
+RAZORPAY_KEY_ID =rzp_test_RQbUI9bAOO5cba
+RAZORPAY_SECRET =ZNnDDtpbIrjpxJwgksSlC3c3
