--- a/WoodenStories-Backend/.env
+++ b/WoodenStories-Backend/.env
@@ -1,10 +1,10 @@
 
 //-------------------Mysql------------------------------
 
-MySQL_Host=localhost
+MySQL_Host=mysql.railway.internal
 MySQL_User=root
-MySQL_Password=123456
-MySQL_Database=wooden_stories_db
+MySQL_Password=upBowAmWBFDZrdLYeeQoAmfsnRdlHNWT
+MySQL_Database=railway
 
 PORT=5000
 UPLOAD_DIR=uploads
