--- a/WoodenStories-Backend/.gitignore
+++ b/WoodenStories-Backend/.gitignore
@@ -11,7 +11,12 @@ node_modules
 dist
 dist-ssr
 *.local
+
 .env
+.env.example
+.env.local
+.env.development
+.env.production
 
 
 # Editor directories and files
