--- a/WoodenStories-Backend/.env
+++ b/WoodenStories-Backend/.env
@@ -3,10 +3,11 @@
 
 MySQL_Host=mysql.railway.internal
 MySQL_User=root
-MySQL_Password=upBowAmWBFDZrdLYeeQoAmfsnRdlHNWT
+MySQL_Password=hceqAfMJkDCeXApRwUTmpeRcKVlszXjm
 MySQL_Database=railway
+Port=3306
 
-PORT=5000
+
 UPLOAD_DIR=uploads
 
 //-------------------------Cloudinary-----------------
